--- a/btvnbuoi2_24_7/nbproject/project.properties
+++ b/btvnbuoi2_24_7/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/btvnbuoi5.24-7.jar
+dist.jar=${dist.dir}/btvnbuoi2_24_7.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/btvnbuoi5.24-7
+dist.jlink.output=${dist.jlink.dir}/btvnbuoi2_24_7
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=btvnbuoi5.24-7
+jlink.launcher.name=btvnbuoi2_24_7
 main.class=btvnbuoi3.pkg24.pkg7.bai1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
