--- a/btvnbuoi2_24_7/build.xml
+++ b/btvnbuoi2_24_7/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="btvnbuoi5.24-7" default="default" basedir=".">
-    <description>Builds, tests, and runs the project btvnbuoi5.24-7.</description>
+<project name="btvnbuoi2_24_7" default="default" basedir=".">
+    <description>Builds, tests, and runs the project btvnbuoi2_24_7.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="btvnbuoi5.24-7-impl.jar">
+        <target name="run" depends="btvnbuoi2_24_7-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
