--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /btnvnbuoi3/nbproject/private/
 /btvnbuoi5.24-7/nbproject/private/
 /btvnbuoi5.24-7/build/
+/Buoi3/nbproject/private/
+/Buoi3/build/
+/btvnbuoi3_31-7/nbproject/private/
+/btvnbuoi3_31-7/build/
